# 6dof_ws

./: README.md
src/config/: sixdof_config.yaml
src/mmdetection_ros/mmdetection_bringup/config/solo/: solov2_r50_fpn_3x_coco.py
src/mmdetection_ros/mmdetection_msgs/: CMakeLists.txt
src/mmdetection_ros/mmdetection_msgs/srv/: TaskRequest.srv
src/mmdetection_ros/mmdetection_ros/: package.xml  setup.cfg
src/mmdetection_ros/mmdetection_ros/mmdetection_ros/: mmdetection_node.py  visualization_node.py
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_interfaces/msg/: RegistrationHomos.msg
src/pc_registration/: package.xml  setup.cfg  setup.py
src/pc_registration/pc_registration/: node_registration.py  o3d_utils.py  pcRegistration_utils.py  readpoints.py
src/run_launch/: package.xml  setup.cfg  setup.py
src/run_launch/config/: c_to_w.yaml
src/run_launch/launch/: start_camera.launch.py
src/run_launch/rviz/: rvc.rviz
src/rvc_ros2_interface/: CMakeLists.txt  README.md  package.xml
src/rvc_ros2_interface/include/: rvc_camera.h
src/rvc_ros2_interface/src/: main.cpp  rvc_camera.cpp
src/sixdof_tf2/: package.xml  setup.cfg  setup.py
src/sixdof_tf2/launch/: sixdof_tf2.launch.py
src/sixdof_tf2/sixdof_tf2/: tf_broadcaster.py
src/super4pcs/: CMakeLists.txt  README.md  package.xml
src/super4pcs/include/: pcl_helper.h
src/super4pcs/include/detect3d_synchronizer/: detect3d_synchronizer.h
src/super4pcs/include/pcl/registration/: super4pcs.h
src/super4pcs/include/pcl/registration/impl/: super4pcs.hpp
src/super4pcs/launch/: super4pcs.launch.py
src/super4pcs/src/: 4pcs_publisher.cpp  detect3d_node.cpp  detect3d_synchronizer.cpp  msg_filters.cpp  msg_producer.cpp
