<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pc_registration</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sjl@todo.todo">sjl</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>message_filters</build_depend>

  <depend>numpy</depend>
  <depend>open3d</depend>
  <depend>geometry_msgs</depend>
  <depend>math</depend>
  <depend>roslib</depend> 


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
